--- a/index.html
+++ b/index.html
@@ -344,7 +344,10 @@
                 <span>🎤</span>
                 Voice Quality Evaluation
             </h1>
-            <p>Help us evaluate speech synthesis quality</p>
+            <p class="intro">Thank you for helping us improve voice technology!</p>
+            <br>
+            <hr>
+            <div class="disclaimer"><strong>🔒 Privacy & Use Notice:</strong> This test collects only your preference selections (e.g., "A", "B"). No personal data (IP, cookies, names, emails) is recorded. Responses are anonymized and used solely for voice model evaluation and research. By participating, you consent to this use.</div>
         </div>
 
         <div class="info-box">
